Bug #1625 - Create Group: Missing space, extra pipe in page title

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1596,10 +1596,12 @@ body{
         }
     }
 }
-.create-group-submenu{
-    .submenu-title{
-        padding-right: 7px;
-        margin-right: 4px;
+#content{
+    .create-group-submenu{
+        .submenu-title{
+            margin-right: 4px;
+            border-right: none;
+        }
     }
 }
 #group-list{
